testsuite/poke.pkl/offsets-diag-1.pk
/* { dg-do compile } */

var a = 0;
type Foo = struct { int i @ a#B; };

var o = 23#Foo; /* { dg-error "complete types" } */
